--- a/app/assets/components/subpages/oj-about-page.html
+++ b/app/assets/components/subpages/oj-about-page.html
@@ -7,7 +7,7 @@
           <div class="answer">
               <p>
                 If your article is posted on the astro-ph section of the arXiv,
-                it’s an appropriate submission for the Open Journal.
+                it's an appropriate submission for the Open Journal.
               </p>
           </div>
 
@@ -15,23 +15,23 @@
           <div class="question">Who’s on your editorial board?</div>
           <div class="answer">
               <p style="font-family:monospace">
-                  &ltlinsert list here&gt;
+                  &lt;linsert list here&gt;
               </p>
           </div>
 
 
-          <div class="question">What’s the philosophy behind the Open Journal?</div>
+          <div class="question">What's the philosophy behind the Open Journal?</div>
           <div class="answer">
               <p>
-                  We don’t need journals to disseminate our research anymore; in astrophysics and cosmology,
+                  We don't need journals to disseminate our research anymore; in astrophysics and cosmology,
                   we all post our research to the arXiv. We only need journals for peer review,
                   and the prestige that comes along with that. But traditional journals still have all
                   the trappings of publication, including an unnecessarily slow and expensive editorial process,
                   along with a nasty habit of placing the articles they publish behind a paywall.
               </p>
               <p>
-                  The Open Journal does things differently, because we’re not a publisher.
-                  Instead, we’re a peer-review platform, piggybacking on the arXiv for all the “publishing.”
+                  The Open Journal does things differently, because we're not a publisher.
+                  Instead, we're a peer-review platform, piggybacking on the arXiv for all the "publishing."
                   The Open Journal provides peer review for arXiv articles, making the process as fast and
                   easy as we can. Once peer review for a particular article is successfully completed, we
                   mark that article as accepted and send that information to the arXiv. Accepted articles
@@ -44,7 +44,7 @@
           <div class="answer">
               <p>
                   The articles are open, in that all articles accepted by the Open Journal are released under a
-                  Creative Commons Attribution license. The infrastructure is open too — the code running
+                  Creative Commons Attribution license. The infrastructure is open too – the code running
                   the Open Journal is available under an MIT license. The reviewer comments can be made open
                   at the joint discretion of the authors and reviewers.
               </p>
