--- a/app/assets/components/subpages/oj-home-page.html
+++ b/app/assets/components/subpages/oj-home-page.html
@@ -1,7 +1,7 @@
 <polymer-element name="oj-home-page" >
   <template>
     <section layout vertical class="boiler-plate">
-      <h1>Welcome to the Open Journal!</h1>
+      <h1>Welcome to the Open Journal</h1>
       <p>
           The Open Journal is a peer-reviewed, open-access journal for research in astrophysics and cosmology.
       </p>
@@ -9,26 +9,19 @@
       <div class="question">
         How does it work?
       </div>
+
       <div class="answer">
         <p>
           The Open Journal makes submitting and reviewing articles fast and easy:
         </p>
         <ul>
-            <li>Submitting to the Open Journal is as easy as posting your article to the arXiv.
-                Just log in here and enter the arXiv ID number, and you're done!</li>
-            <li>Our novel reviewer interface makes it easy for authors and reviewers to discuss articles.
-                You'll be notified in real time as reviewers make individual comments on your article,
-                dramatically speeding up the process of peer review.</li>
-            <li>Revisions are submitted in the same manner as the original article — simply post a new version of
-                your article to the arXiv.</li>
-            <li>When your article is accepted, it will appear immediately on the Open Journal’s website.
-                You’ll also receive a "badge" on your arXiv abstract page indicating that your article was reviewed by
-                the Open Journal.</li>
+          <li>Submitting to the Open Journal is as easy as posting your article to the arXiv. Just log in here and enter the arXiv ID number, and you're done!</li>
+          <li>Our novel reviewer interface makes it easy for authors and reviewers to discuss articles. You'll be notified in real time as reviewers make individual comments on your article, dramatically speeding up the process of peer review.</li>
+          <li>Revisions are submitted in the same manner as the original article — simply post a new version of your article to the arXiv.</li>
+          <li>When your article is accepted, it will appear immediately on the Open Journal’s website. You'll also receive a "badge" on your arXiv abstract page indicating that your article was reviewed by the Open Journal.</li>
         </ul>
       </div>
-
     </section>
-
 
     <link rel="stylesheet" href="../../stylesheets/customized-components.css.scss" />
     <style>
