Style that menu

--- a/app/assets/components/oj-app.html
+++ b/app/assets/components/oj-app.html
@@ -54,6 +54,10 @@
         font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
       }
 
+      :host /deep/ core-menu {
+        font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+      }
+
       .title {
         font-size: 25px;
       }
