--- a/app/assets/components/subpages/oj-paper-preview.html
+++ b/app/assets/components/subpages/oj-paper-preview.html
@@ -11,8 +11,7 @@
         </template>
 
         <div id="details">
-
-          <h2>Preview of {{paper_details.title}} </h2>
+          <h2>Preview of: <em>{{paper_details.title}}</em></h2>
 
           <template if="{{paper_details.authors | isArray}}">
           <ul id='authors'>
@@ -27,8 +26,7 @@
           </template>
 
           <p id='summary'>{{paper_details.summary}}</p>
-          <paper-button raised role='button'  on-tap={{submitForReview}}>Submit for review</paper-button>
-
+          <paper-button raised role='button' on-tap={{submitForReview}}>Submit for review</paper-button>
         </div>
       </div>
     </template>
@@ -61,23 +59,34 @@
     <style>
       #preview{
         width: 50%;
-        min-height: 600px
+        min-height: 600px;
       }
+
       #preview iframe{
         width:100%;
         height: 800px;
       }
+
       #details{
         width: 50%;
         box-sizing: border-box;
-        padding: 0 20px
+        padding: 0 20px;
+        font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
       }
+
       #authors{
         list-style: none;
-        -webkit-padding-start: 40px;
+        margin-left: 0px;
+        padding: 0px
       }
+
       #authors li{
         display: inline;
+        padding-left: 0px;
+      }
+
+      p#summary{
+        font-size: 0.9em
       }
 
     </style>
