--- a/app/assets/components/ui-elements/oj-user-login.html
+++ b/app/assets/components/ui-elements/oj-user-login.html
@@ -1,7 +1,7 @@
 <polymer-element name="oj-user-login" attributes='user userReady'>
   <template>
     <template if="{{user.name != undefined}}">
-      <a class='link' href='https://orcid.org/my-orcid' target='_blank' >{{user.name}} {{ {"(Editor)": user.editor} | tokenList }}</a>
+      <a class='link username' href='https://orcid.org/my-orcid' target='_blank' >{{user.name}} {{ {"(Editor)": user.editor} | tokenList }}</a>
       <a class='link signout' href='/signout'>Sign Out</a>
     </template>
 
@@ -19,14 +19,20 @@
         font-weight: 100;
         text-decoration: none;
       }
+
+      a.username {
+        font-size: 0.6em;
+
+      }
+
       a.signout {
           background: #3849a3;
           padding: 8px 12px;
       }
+
       a.signout:hover {
           background: #4053ba;
       }
-
     </style>
   </template>
 
