Made some progress with being able to select text in the pdf. The location of the divs are off though and I am not sure why. Also its currently very slow. We might need to figure out how to make it much faster

--- a/app/assets/components/ui-elements/stacked-pdf-page.html
+++ b/app/assets/components/ui-elements/stacked-pdf-page.html
@@ -112,11 +112,15 @@
         canvas.width                  = this.viewport.width;
         canvas.height                 = this.viewport.height;
 
+
         this.pageContent.getTextContent().then(function(textContent) {
-          this.textLayer = new TextLayerBuilder(this.textLayerDiv, 0);
+          this.textLayer = new TextLayerBuilder(
+            {textLayerDiv:this.textLayerDiv, pageIndex:this.pageIndex-1,
+              viewport:this.viewport});
           this.textLayer.setTextContent(textContent);
 
-          this.pageContent.render({canvasContext: this.context, viewport: this.viewport,textLayer: this.textLayer});
+          this.pageContent.render({canvasContext: this.context, viewport: this.viewport});
+
         }.bind(this));
       }
 
