--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
 
     <%= javascript_include_tag "application" %>
 
-    <script charset="utf-8" src='/pdf.js'></script>
-    <script charset="utf-8" src="https://vivin.net/pub/pdfjs/textlayerbuilder.js"></script>
+    <script charset="utf-8" src='/pdfjs/build/pdf.js'></script>
+    <script charset="utf-8" src="/pdfjs/build/text_layer_builder.js"></script>
     <%= csrf_meta_tags %>
   </head>
 <body unresolved fullbleed>
