controls to allow editors to assign reviewers and to set the status of a page

--- a/app/assets/components/ui-elements/all.html
+++ b/app/assets/components/ui-elements/all.html
@@ -4,6 +4,7 @@
  *= require ./oj-new-annotation
  *= require ./oj-annotation
  *= require ./oj-paper-row
-
+ *= require ./oj-reviewer
+ *= require ./oj-editor-paper-controlls
  *= require_tree .
 -->
