adding editor controls

--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -13,7 +13,7 @@
       <paper-progress class='bottom fit' value="{{loadProgress}}"></paper-progress>
     </core-toolbar>
 
-    <oj-editor-paper-controls flex paper={{paper}}></oj-editor-paper-controls>
+    <oj-editor-paper-controls flex paper="{{paper}}"></oj-editor-paper-controls>
 
 
     <section layout vertical>
