icons that actually exist

--- a/app/assets/components/ui-elements/oj-editor-paper-controls.html
+++ b/app/assets/components/ui-elements/oj-editor-paper-controls.html
@@ -13,8 +13,8 @@
 
       <div id='controlls'>
         <p>Status: {{paper.state}}
-          <paper-icon-button icon="accept"></paper-icon-button>
-          <paper-icon-button icon="reject"></paper-icon-button>
+          <paper-icon-button icon="thumb-up"></paper-icon-button>
+          <paper-icon-button icon="thumb-down"></paper-icon-button>
         </p>
       </div>
 
