proper tag name

--- a/app/assets/components/ui-elements/oj-reviewer.html
+++ b/app/assets/components/ui-elements/oj-reviewer.html
@@ -1,14 +1,14 @@
 <polymer-element name='oj-reviewer' attributes='reviewer'>
 
   <template>
-    <p>{{reviewer.name}} <icon-button onClick={{remove}} icon='remove'></icon-button></p>
+    <p>{{reviewer.name}} <paper-icon-button  onClick={{remove}} icon='close'></paper-icon-button></p>
 
     <style>
       :host{
         display: inline;
       }
       p{
-        
+
       }
     </style>
   </template>
