adding paper-dialog for dialogs

--- a/app/assets/components/application.html
+++ b/app/assets/components/application.html
@@ -21,6 +21,7 @@
  *= require paper-input/paper-input
  *= require paper-button/paper-button
  *= require paper-progress/paper-progress
+ *= require paper-dialog/paper-action-dialog
  *= require app-router/app-router
  *= require ajax-form/ajax-form
 
