an element to lookup users of the journal

--- a/app/assets/components/ui-elements/oj-user-lookup.html
+++ b/app/assets/components/ui-elements/oj-user-lookup.html
@@ -1,6 +1,6 @@
-<polymer-element name='oj-user-lookup' attributes=''>
+<polymer-element name='oj-user-lookup' attributes='placeholder'>
   <template>
-    <input value={{search}}></input>
+    <input placeholder={{placeholder}} value={{search}}></input>
     <ul class='suggestions'>
       <template repeat="{{suggestion in suggestions}}">
         <li on-tap="{{selectName}}" userid="{{suggestion.name}}">{{suggestion.name}}</li>
@@ -14,6 +14,19 @@
     </json-get>
 
     <style>
+      ul{
+        padding:0px;
+        margin:0px;
+      }
+
+      li{
+        box-model:border-box;
+        padding: 5px 10px;
+        background-color: grey;
+        color:white;
+        border-bottom: 1px solid black;
+        cursor: pointer;
+      }
 
 
     </style>
@@ -22,18 +35,22 @@
   <script>
     Polymer({
       suggestions:[],
+      searching: false,
       searchChanged:function(){
-        console.log("here", this.$.lookUpSearch)
-        this.$.lookUpSearch.data = {guess: this.search}
-        this.$.lookUpSearch.go()
+        if(this.searching==false && this.search!=""){
+          this.searching= true;
+          this.$.lookUpSearch.data = {guess: this.search}
+          this.$.lookUpSearch.go()
+        }
       },
       selectName:function(event, detail, sender){
-        this.fire("add-reviewer", sender.getAttribute("userid"))
+        this.fire("user-selected", sender.getAttribute("userid"))
         this.search = ""
         this.suggestions = []
       },
       response:function(event,detail){
-        this.suggestions=detail
+        this.searching= false;
+        this.suggestions=detail;
       }
     })
   </script>
