Router.go not Router.navigate

--- a/app/assets/components/ui-elements/oj-editor-paper-controls.html
+++ b/app/assets/components/ui-elements/oj-editor-paper-controls.html
@@ -103,7 +103,7 @@
       },
       paperDone:function(){
         this.fire("notification", "Thank your for your service")
-        this.router.navigate("/papers")
+        this.router.go("/papers")
       }
     })
   </script>
