count expression for counting array sizes

--- a/app/assets/components/oj-global-expressions.html
+++ b/app/assets/components/oj-global-expressions.html
@@ -5,8 +5,10 @@
     PolymerExpressions.prototype.isNotArray = function(obj) {
         return ! Array.isArray(obj);
     };
+    PolymerExpressions.prototype.count = function(obj) {
+        return obj.length;
+    };
     PolymerExpressions.prototype.json = function(obj) {
         return JSON.stringify(obj);
     };
 </script>
-
