changing to use .length

--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -7,7 +7,7 @@
           <p layout horizontal>
             <span> {{annotation.body | truncate}}</span>
             <span flex></span>
-            <span>{{annotation.responses | count}} replies</span>
+            <span>{{annotation.responses.length}} replies</span>
           </p>
         </template>
         <template if="{{!collapsed}}">
